# DGGRID

./: .gitignore  CMakeLists.txt
src/apps/appex/: CMakeLists.txt  appex.cpp
src/apps/dggrid/: CMakeLists.txt  OpBasic.cpp  OpBasic.h  SubOpBasicMulti.cpp  SubOpBasicMulti.h  SubOpOut.cpp  SubOpOut.h  SubOpTransform.cpp  SubOpTransform.h  jldggrid.cpp
src/apps/jlbind/: jlbind.cpp
src/lib/dgaplib/: CMakeLists.txt
src/lib/dgaplib/include/dgaplib/: DgApOperation.h  DgApSubOperation.h
src/lib/dgaplib/lib/: DgApSubOperation.cpp
src/lib/dglib/: CMakeLists.txt
src/lib/dglib/include/dglib/: DgBase.h  DgContCartRF.h  DgDVec2D.h  DgIDGGBase.h  DgLocation.h  DgRF.h  DgRFBase.h
src/lib/dglib/lib/: DgDVec2D.cpp  DgRF.hpp  DgRFBase.cpp
